--- a/android/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#151A2B"
-        android:endColor="#2F2550"
+        android:startColor="#111220"
+        android:endColor="#1C1230"
         android:angle="135" />
 </shape>
